Dual Spaces / Intro to Tensors

--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -23,8 +23,9 @@
 \pagenumbering{arabic}
 \pagestyle{main}
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
-\setcounter{chapter}{9}
-\subfile{Chapter10/chapter10.tex}
+\subfile{Chapter1/chapter1.tex}
+
+\printbibliography[heading=bibintoc]
 
 
 
