--- a/main.bib
+++ b/main.bib
@@ -6,3 +6,10 @@
     year      = {1976},
     edition   = {Third}
 }
+
+@unpublished{bib:DifferentialForms,
+    title = {Differential Forms},
+    author = {Victor Guillemin and Peter J. Haine},
+    year = {2018},
+    note = {\url{https://math.mit.edu/classes/18.952/2018SP/files/18.952_book.pdf}}
+}
