--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -23,6 +23,8 @@
 \pagenumbering{arabic}
 \pagestyle{main}
 \renewcommand{\leftmark}{Problem Set \thesection}
+\setenumerate[1]{leftmargin=4em}
+\setenumerate[2]{label={(\arabic*)}}
 \subfile{PSet1/pset1.tex}
 \newpage
 
