--- a/preamble.tex
+++ b/preamble.tex
@@ -4,7 +4,7 @@
 \usepackage{marginnote}
 \usepackage[style=apa]{biblatex}
 \usepackage{enumitem}
-\usepackage{amsmath,amssymb,amsbsy}
+\usepackage{amsmath,amssymb,amsbsy,amsthm}
 \usepackage{bm}
 \usepackage[hidelinks]{hyperref}
 
