Tensor Product Properties / Permutations

--- a/preamble.tex
+++ b/preamble.tex
@@ -30,6 +30,7 @@
 \DeclareMathOperator{\Hom}{Hom}
 \DeclareMathOperator{\ev}{ev}
 \DeclareMathOperator{\im}{im}
+\DeclareMathOperator{\sgn}{sign}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
