--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage[style=apa]{biblatex}
 \usepackage{enumitem}
 \usepackage{amsmath,amssymb,amsbsy,amsthm}
-\usepackage{bm}
+\usepackage{bm,physics}
 \usepackage[hidelinks]{hyperref}
 
 \MakeOuterQuote{"}
@@ -34,10 +34,11 @@
 \setitemize[3]{label={\scriptsize$\blacksquare$}}
 
 \DeclareMathOperator{\Hom}{Hom}
-\DeclareMathOperator{\ev}{ev}
+\DeclareMathOperator{\eva}{ev}
 \DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\sgn}{sign}
 \DeclareMathOperator{\Alt}{Alt}
+\DeclareMathOperator{\spn}{span}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
