--- a/preamble.tex
+++ b/preamble.tex
@@ -46,6 +46,7 @@
 \newcommand{\alt}[2][]{\mathcal{A}^{#1}(#2)}
 \newcommand{\sym}[2][]{\mathcal{S}^{#1}(#2)}
 \newcommand{\lam}[2][]{\Lambda^{#1}(#2)}
+\newcommand{\ide}[2][]{\mathcal{I}^{#1}(#2)}
 \renewcommand{\vec}[1]{#1}
 
 \usepackage{subfiles}
