--- a/preamble.tex
+++ b/preamble.tex
@@ -39,6 +39,7 @@
 \DeclareMathOperator{\sgn}{sign}
 \DeclareMathOperator{\Alt}{Alt}
 \DeclareMathOperator{\spn}{span}
+\DeclareMathOperator{\id}{id}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
