Overview of Differential Forms

--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -25,6 +25,8 @@
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
 \subfile{Chapter1/chapter1.tex}
 
+\subfile{Chapter2/chapter2.tex}
+
 \printbibliography[heading=bibintoc]
 
 
