--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,7 @@
 \usepackage[bottom]{footmisc}
 \usepackage[style=apa]{biblatex}
 \usepackage{enumitem}
+\usepackage{tikz}
 \usepackage{amsmath,amssymb,amsbsy,amsthm}
 \usepackage{bm,physics}
 \usepackage[hidelinks]{hyperref}
@@ -48,6 +49,7 @@
 \newcommand{\sym}[2][]{\mathcal{S}^{#1}(#2)}
 \newcommand{\lam}[2][]{\Lambda^{#1}(#2)}
 \newcommand{\ide}[2][]{\mathcal{I}^{#1}(#2)}
+\newcommand{\ome}[2][]{\Omega^{#1}(#2)}
 \renewcommand{\vec}[1]{#1}
 
 \usepackage{subfiles}
