Problem Set 2 (Questions)

--- a/preamble.tex
+++ b/preamble.tex
@@ -44,12 +44,15 @@
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
+
 \newcommand{\lin}[2][]{\mathcal{L}^{#1}(#2)}
 \newcommand{\alt}[2][]{\mathcal{A}^{#1}(#2)}
 \newcommand{\sym}[2][]{\mathcal{S}^{#1}(#2)}
 \newcommand{\lam}[2][]{\Lambda^{#1}(#2)}
 \newcommand{\ide}[2][]{\mathcal{I}^{#1}(#2)}
 \newcommand{\ome}[2][]{\Omega^{#1}(#2)}
+
+\newcommand{\e}[1][]{\text{e}^{#1}}
 \renewcommand{\vec}[1]{#1}
 
 \usepackage{subfiles}
