Exterior Derivative Properties

--- a/preamble.tex
+++ b/preamble.tex
@@ -41,6 +41,7 @@
 \DeclareMathOperator{\Alt}{Alt}
 \DeclareMathOperator{\spn}{span}
 \DeclareMathOperator{\id}{id}
+\DeclareMathOperator{\crl}{curl}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
