--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -2,6 +2,9 @@
 
 \input{../preamble.tex}
 
+\renewcommand{\contentsname}{Weeks}
+\renewcommand{\chaptername}{Week}
+
 \title{MATH 20510 (Analysis in $\R^n$ III -- Accelerated) Notes}
 \author{Steven Labalme}
 
@@ -23,9 +26,17 @@
 \pagenumbering{arabic}
 \pagestyle{main}
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
-\subfile{Chapter1/chapter1.tex}
+\subfile{Week1/week1.tex}
 
-\subfile{Chapter2/chapter2.tex}
+\subfile{Week2/week2.tex}
+
+\subfile{Week3/week3.tex}
+
+\subfile{Week4/week4.tex}
+
+\subfile{Week5/week5.tex}
+
+\subfile{Week6/week6.tex}
 
 \printbibliography[heading=bibintoc]
 
